pkg/lang/syntax/testdata/ub/valid/selector-body/factory.ub
factory: {
  library-configs: {
    greet: input.greet-config
  }

  resources: {
    hello: std.fs-file {
      path: input.path
    }
  }

  data: {
    existing: std.file {
      path: input.path
    }
  }

  actions: {
    run: std.exec {
      command: 'echo hello'
    }
  }
}
